--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Ryan Donald"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "A driven engineer, who is excited to continue working in Robotics, and driving the robotics industry forward"
   location         : "Methuen, MA"
   employer         : "Draper"
   uri              : # URL
